# ycappuccino-core

./: main.py  pyproject.toml
base/model/: item.js
brython/: index.html
client/: application.py
client/bundles/: indexEndpoint.py  pythonEndpoint.py
client/pelix/: framework.py
component_creator/: api.py
component_creator/bundles/: component_factory.py  component_trigger.py
component_creator/models/: component.py  component_factory.py
core/: __init__.py  api.py  beans.py  decorator_app.py  executorService.py  executor_service.py  framework.py  utils.py
core/bundles/: activity_logger.py  configuration.py  core_bootstrap.py  endpoints.py  indexEndpoint.py  item_manager.py  jwt.py  manager_upload.py  managers.py  proxy.py  util_swagger.py
core/model/: RolePermission.py  account.py  decorators.py  login.py  media.py  model.py  permission.py  role.py  utils.py
core/models/: decorators.py
core/tests/: test_activify_logger.py  test_configuration.py  test_executor_service.py  test_proxy.py  test_utils.py
endpoints/: api.py  beans.py
endpoints/bundles/: client_path.py  endpoints.py  jwt.py  server_path.py  util_swagger.py  utils_header.py
endpoints_storage/: beans.py
endpoints_storage/client_admin/: api.py  (+1 more)
iotill/: main.py
mongo/: api.py
pelix/: ldapfilter.py  utilities.py
rest_app_base/: api.py
scheduler/: api.py
scripts/: api.py
server/: __init__.py  api.py
simpleform/: index.html
storage/: api.py
swagger/: index.html
test/: test_url_parse.py
testImport/: index.html  test2.py
yblues/: main.py
ycappuccino/: __init__.py
(+213 files in other folders)
